--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Placeholder</title>
+	<title>Allan's Portfolio</title>
+	<meta charset="utf-8" />
+	<link type="text/css" rel="stylesheet" href="enhance/stylesheet.css" />
 </head>
 <body>
-<h3>This is a placeholder for Allan's Portfolio.</h3>
+	<div class="titlebar">
+		<h2>Allan's Portfolio</h2>
+	</div>
+	<div class="nav">
+		<ul>
+			<li>Main</li>
+			<li>Projects</li>
+		</ul>
+	</div> 
+	<div class="main">
+		<p>Content will go here.</p>
+	</div>
+	<div class="footer">
+		<p>End of page information.</p>
+	</div>
 </body>
 </html>
