--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 	<div class="titlebar">
 		<h2>Allan's Portfolio</h2>
 	</div>
-	<div class="nav">
-		<ul>
-			<li>Main</li>
-			<li>Projects</li>
-		</ul>
-	</div> 
-	<div class="main">
-		<p>Content will go here.</p>
-	</div>
-	<div class="footer">
-		<p>End of page information.</p>
+	<div id="wrapper">	
+		<div class="nav">
+			<ul>
+				<li>Main</li>
+				<li>Projects</li>
+			</ul>
+		</div> 
+		<div class="main">
+			<p>Content will go here.</p>
+			<p>Another one</p>
+			<p>Here's another one.</p>
+			<p>Yet another one</p>
+			<p>Even more</p>
+		</div>
+		<div class="footer">
+			<p>End of page information.</p>
+		</div>
 	</div>
 </body>
 </html>
