Various style adjustments and image added

--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
 	<title>Allan's Portfolio</title>
 	<meta charset="utf-8" />
 	<link type="text/css" rel="stylesheet" href="enhance/stylesheet.css" />
+	<link rel="icon" href="images/sitebuild_main.png" />
 </head>
 <body>
 	<div class="titlebar">
-		<h2>Allan's Portfolio</h2>
+		<img src="images/sitebuild_main.png" align="left" />
+		<h1>Allan's Portfolio</h1>
 	</div>
 	<div id="wrapper">	
 		<div class="nav">
-			<ul>
-				<li>Main</li>
-				<li>Projects</li>
-			</ul>
+			<h4>Main</h4>
+			<h4>Projects</h4>
+			<h4>Resume</h4>
 		</div> 
 		<div class="main">
-			<p>Content will go here.</p>
-			<p>Another one</p>
-			<p>Here's another one.</p>
-			<p>Yet another one</p>
-			<p>Even more</p>
+			<h3>Hello and welcome to my online portfolio!</h3>
+			<p>Here you will find projects I have completed from my M.S. Statistics Program, as a member of the CSUEB Data Science Club, and in my own time.</p>
+			<p>I am actively pursuing a career in data science.<br>My goals as a data scientist include:</br></p>
+				<ul>
+					<li>Effectively communicating data both verbally and visually</li>
+					<li>Designing and maintaining predictive models</li>
+					<li>Making data-driven decisions</li>
+					<li>Data mining</li>
+					<li>Maintaining Database Architecture and general data flow</li>
+				</ul>
+			<p>All forms of data collection interest me, however I have experience with social, financial, and airline data.</p>
 		</div>
 		<div class="footer">
 			<p>End of page information.</p>
