Resume finished, images added, and various style changes

--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 </head>
 <body>
 	<div class="titlebar">
-		<img src="images/sitebuild_main.png" align="left" />
-		<h1>Allan's Portfolio</h1>
+		<div id="titleimage">
+			<img src="images/sitebuild_main.png" />
+		</div>
+		<div id="titleword">
+			<h1>Allan's Portfolio</h1>
+		</div>
 	</div>
 	<div id="wrapper">	
 		<div class="nav">
 			<h4>Main</h4>
 			<h4>Projects</h4>
-			<h4>Resume</h4>
+			<h4><a href="resume.html">Resume</a></h4>
 		</div> 
 		<div class="main">
 			<h3>Hello and welcome to my online portfolio!</h3>
