--- a/pages/projects.html
+++ b/pages/projects.html
@@ -22,6 +22,7 @@
 		</div> 
 		<div class="main">
 			<h3>Projects will go here.</h3>
+			<p>Content to be added</p>
 		</div>
 		<div class="footer">
 			<p>End of page information.</p>
