Cleaned up links

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<div id="wrapper">	
 		<div class="nav">
 			<h4>Main</h4>
-			<h4>Projects</h4>
-			<h4><a href="resume.html">Resume</a></h4>
+			<h4><a href="pages/projects.html">Projects</a></h4>
+			<h4><a href="pages/resume.html">Resume</a></h4>
 		</div> 
 		<div class="main">
 			<h3>Hello and welcome to my online portfolio!</h3>
