--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Allan's Resume</title>
+	<title>Allan's Portfolio | Resume</title>
 	<meta charset="utf-8" />
-	<link type="text/css" rel="stylesheet" href="enhance/stylesheet.css" />
-	<link type="text/css" rel="stylesheet" href="enhance/mainstyle.css" />
-	<link rel="icon" href="images/sitebuild_main.png" />
+	<link type="text/css" rel="stylesheet" href="../enhance/stylesheet.css" />
+	<link type="text/css" rel="stylesheet" href="../enhance/mainstyle.css" />
+	<link rel="icon" href="../images/sitebuild_main.png" />
 </head>
 <body>
 	<div class="titlebar">
 		<div id="titleimage">
-			<img src="images/sitebuild_main.png" />
+			<img src="../images/sitebuild_main.png" />
 		</div>
 		<div id="titleword">
 			<h1>Allan's Portfolio</h1>
@@ -18,8 +18,8 @@
 	</div>
 	<div id="wrapper">	
 		<div class="nav">
-			<h4><a href="index.html">Main</a></h4>
-			<h4>Projects</h4>
+			<h4><a href="../index.html">Main</a></h4>
+			<h4><a href="projects.html">Projects</a></h4>
 			<h4>Resume</h4>
 		</div> 
 		<div class="main">
