--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Projects</title>
+	<title>Allan's Portfolio | Projects</title>
 	<meta charset="utf-8" />
-	<link type="text/css" rel="stylesheet" href="enhance/stylesheet.css" />
+	<link type="text/css" rel="stylesheet" href="../enhance/stylesheet.css" />
+	<link rel="icon" href="../images/sitebuild_main.png" />
 </head>
 <body>
 	<div class="titlebar">
 		<div id="titleimage">
-			<img src="images/sitebuild_main.png" />
+			<img src="../images/sitebuild_main.png" />
 		</div>
 		<div id="titleword">
 			<h1>Allan's Portfolio</h1>
@@ -16,7 +17,7 @@
 	</div>
 	<div id="wrapper">	
 		<div class="nav">
-			<h4>Main</h4>
+			<h4><a href="../index.html">Main</a></h4>
 			<h4>Projects</h4>
 			<h4><a href="resume.html">Resume</a></h4>
 		</div> 
