Small link change

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -24,7 +24,7 @@
 		</div> 
 		<div class="main">
 			<h1 align="center">Allan Swartz</h1>
-			<p align="center"><strong>Email</strong>:<a href="mailto:agsw@outlook.com">agsw@outlook.com</a>|<strong>Github</strong>:<a href="https://github.com/aswartz04">aswartz04</a></p>
+			<p align="center"><strong>Email</strong>:<a href="mailto:agsw@outlook.com">agsw@outlook.com</a>|<strong>Github</strong>:<a href="https://github.com/aswartz04" target="_blank">aswartz04</a></p>
 			<p>OBJECTIVE:  Seeking a creative and dynamic environment to develop professional skills as a data scientist.</p>
 			<p>
 				<strong>TECHNICAL SKILLS</strong>
