--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,7 +23,7 @@
 		</div> 
 		<div class="main">
 			<h3>Projects will go here.</h3>
-			<p>Content to be added</p>
+			<p><a href="stattheory/labci.html">Exploring Confidence Intervals</a></p>
 		</div>
 		<div class="footer">
 			<p>End of page information.</p>
