Changed footer for mainpage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<p>All forms of data collection interest me, however I have experience with social, financial, and airline data.</p>
 		</div>
 		<div class="footer">
-			<p>End of page information.</p>
+			<p>Powered by Github Pages | Site created by Allan Swartz 2016</p>
 		</div>
 	</div>
 </body>
