--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Allan's Portfolio</title>
 	<meta charset="utf-8" />
 	<link type="text/css" rel="stylesheet" href="enhance/stylesheet.css" />
+	<link type="text/css" rel="stylesheet" href="enhance/mainstyle.css" />
 	<link rel="icon" href="images/sitebuild_main.png" />
 </head>
 <body>
@@ -17,7 +18,7 @@
 	</div>
 	<div id="wrapper">	
 		<div class="nav">
-			<h4>Main</h4>
+			<h4 style="font-weight:normal">Main</h4>
 			<h4><a href="pages/projects.html">Projects</a></h4>
 			<h4><a href="pages/resume.html">Resume</a></h4>
 		</div> 
@@ -35,7 +36,13 @@
 			<p>All forms of data collection interest me, however I have experience with social, financial, and airline data.</p>
 		</div>
 		<div class="footer">
-			<p>Powered by Github Pages | Site created by Allan Swartz 2016</p>
+			<p>Powered by Github Pages | Site created by Allan Swartz 2016
+			<span>
+				<a href="https://github.com/aswartz04" target="_blank"><img src="images/GitHub-Mark-32px.png" /></a>
+				<a href="https://www.linkedin.com/in/allan-swartz-8b027768" target="_blank"><img src="images/In-2C-34px-R.png" /></a>
+				<a href="mailto:agsw@outlook.com"><img src="images/mail-32px.png" /></a>
+			</span>
+			</p>
 		</div>
 	</div>
 </body>
