--- a/pages/resume.html
+++ b/pages/resume.html
@@ -98,7 +98,13 @@
 			</p>
 		</div>
 		<div class="footer">
-			<p>End of page information.</p>
+			<p>Powered by Github Pages | Site created by Allan Swartz 2016
+			<span>
+				<a href="https://github.com/aswartz04" target="_blank"><img src="images/GitHub-Mark-32px.png" /></a>
+				<a href="https://www.linkedin.com/in/allan-swartz-8b027768" target="_blank"><img src="images/In-2C-34px-R.png" /></a>
+				<a href="mailto:agsw@outlook.com"><img src="images/mail-32px.png" /></a>
+			</span>
+			</p>
 		</div>
 	</div>
 </body>
