Fixed sources for images

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,6 +4,7 @@
 	<title>Allan's Portfolio | Projects</title>
 	<meta charset="utf-8" />
 	<link type="text/css" rel="stylesheet" href="../enhance/stylesheet.css" />
+	<link type="text/css" rel="stylesheet" href="../enhance/mainstyle.css" />
 	<link rel="icon" href="../images/sitebuild_main.png" />
 </head>
 <body>
@@ -28,9 +29,9 @@
 		<div class="footer">
 			<p>Powered by Github Pages | Site created by Allan Swartz 2016
 			<span>
-				<a href="https://github.com/aswartz04" target="_blank"><img src="images/GitHub-Mark-32px.png" /></a>
-				<a href="https://www.linkedin.com/in/allan-swartz-8b027768" target="_blank"><img src="images/In-2C-34px-R.png" /></a>
-				<a href="mailto:agsw@outlook.com"><img src="images/mail-32px.png" /></a>
+				<a href="https://github.com/aswartz04" target="_blank"><img src="../images/GitHub-Mark-32px.png" /></a>
+				<a href="https://www.linkedin.com/in/allan-swartz-8b027768" target="_blank"><img src="../images/In-2C-34px-R.png" /></a>
+				<a href="mailto:agsw@outlook.com"><img src="../images/mail-32px.png" /></a>
 			</span>
 			</p>
 		</div>
