--- a/pages/projects.html
+++ b/pages/projects.html
@@ -19,7 +19,7 @@
 	<div id="wrapper">	
 		<div class="nav">
 			<h4><a href="../index.html">Main</a></h4>
-			<h4>Projects</h4>
+			<h4 style="font-weight:normal">Projects</h4>
 			<h4><a href="resume.html">Resume</a></h4>
 		</div> 
 		<div class="main">
