--- a/pages/resume.html
+++ b/pages/resume.html
@@ -20,7 +20,7 @@
 		<div class="nav">
 			<h4><a href="../index.html">Main</a></h4>
 			<h4><a href="projects.html">Projects</a></h4>
-			<h4>Resume</h4>
+			<h4 style="font-weight:normal">Resume</h4>
 		</div> 
 		<div class="main">
 			<h1 align="center">Allan Swartz</h1>
