--- a/pages/projects.html
+++ b/pages/projects.html
@@ -25,6 +25,7 @@
 		<div class="main">
 			<h3>Projects will go here.</h3>
 			<p><a href="stattheory/labci.html">Exploring Confidence Intervals</a></p>
+			<p><a href="main/timeseries.html">Time Series Analysis: Home Sales</a></p>
 		</div>
 		<div class="footer">
 			<p>Powered by Github Pages | Site created by Allan Swartz 2016
