--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,6 +26,7 @@
 			<h3>Projects will go here.</h3>
 			<p><a href="stattheory/labci.html">Exploring Confidence Intervals</a></p>
 			<p><a href="main/timeseries.html">Time Series Analysis: Home Sales</a></p>
+			<p><a href="main/pgeML.html">Classification of PG&E's Customers by Electricity Usage</a></p>
 		</div>
 		<div class="footer">
 			<p>Powered by Github Pages | Site created by Allan Swartz 2016
