Modified back arrow at bottom of page

--- a/pages/main/pgeML.html
+++ b/pages/main/pgeML.html
@@ -193,7 +193,7 @@
 ## </code></pre>
 <p>The accuracy found using the C5.0 algorithm is identical to the previous one. However this could be considered an improvement only because it correctly identified one of the Agricultural customers. Even though this is still not the majority of them, there is at least evidence that it can correctly classify this difficult category.</p>
 <p>It does appear that Commercial and Agriculture get mixed up, whereas Residential appears different enough from either of them so as not to get mixed together. One reason classifying this particular dataset is useful is to determine potential electricity usage rates depending on how they are labeled. Thresholds could be set based on the number of customers and usage, and rates adjusted accordingly for any given region's usage. Without even inspecting location, these details could be chosen using the decision tree model. There may be some contention between Agricultural and Commercial customers, as they may potentially be mixed together, so careful consideration of the cost of incorrectly labeling an Agricultural customer as a Commercial one should be exercised. Overall, the majority of customers are either Commercial or Residential, and this model performs well enough to distinguish between the two of them.</p>
-			<p><a href="../projects.html">&lt;Back to Projects</a></p>
+			<p><a href="../projects.html">&#171;Back to Projects</a></p>
 		</div>
 		<div class="footer">
 			<p>Powered by Github Pages | Site created by Allan Swartz 2016
