Changed and centered title for projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,7 +23,7 @@
 			<h4><a href="resume.html">Resume</a></h4>
 		</div> 
 		<div class="main">
-			<h3>Projects will go here.</h3>
+			<h1 align="center">Data Science Projects</h1>
 			<p><a href="stattheory/labci.html">Exploring Confidence Intervals</a></p>
 			<p><a href="main/timeseries.html">Time Series Analysis: Home Sales</a></p>
 			<p><a href="main/pgeML.html">Classification of PG&E's Customers by Electricity Usage</a></p>
