--- a/pages/stattheory/labci.html
+++ b/pages/stattheory/labci.html
@@ -53,7 +53,7 @@ for (i in 1:1000){
         }
 yes</code></pre>
 <pre><code>## [1] 945</code></pre>
-			<p><a href="../projects.html">&#171;Back to Projects</a></p>
+			<p><a href="../main/timeseries.html">Time Series Analysis:Home Sales&#187;</a></p>
 		</div>
 		<div class="footer">
 			<p>Powered by Github Pages | Site created by Allan Swartz 2016
