Bootstrap project added

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,6 +27,7 @@
 			<p><a href="stattheory/labci.html">Exploring Confidence Intervals</a></p>
 			<p><a href="main/timeseries.html">Time Series Analysis: Home Sales</a></p>
 			<p><a href="main/pgeML.html">Classification of PG&E's Customers by Electricity Usage</a></p>
+			<p><a href="stattheory/bootstrap.html">Boostrapping Parameters Using a Multinomial Disribution</a></p>
 		</div>
 		<div class="footer">
 			<p>Powered by Github Pages | Site created by Allan Swartz 2016
