Updated Resume to match current

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -29,9 +29,33 @@
 			<p>
 				<strong>TECHNICAL SKILLS</strong>
 					<ul>
-						<li>R (advanced)</li>
+						<li>Advanced in R, MS Excel, MS Word, MS PowerPoint, and Google Suite</li>
+						<li>Proficient in Python</li>
 						<li>SAS (advanced)</li>
-						<li>Other Software: Minitab, Python, SQL, Tableau, MS Excel, MS Word, PowerPoint, CSS Script Language</li>
+						<li>Other Software: Qualtrics, SPSS, Minitab, SQL, Tableau, SAS, CSS Script Language</li>
+						<li>Statistical techniques: t-tests, linear/multivariate regression, chi-square tests, tests for proportions, ANOVA</li>
+					</ul>
+			</p>
+			<p>
+				<strong>WORK EXPERIENCE</strong>
+				<br><strong>Product Operations Research Analyst</strong>, Google via Creative Circle<span>09/2019-09/2020</span>
+					<ul>
+						<li>Conduct primary and secondary market research to support key decisions on an enterprise level</li>
+						<li>Strategize solutions for B2B use cases for a Google product</li>
+						<li>Generate reports using top-down and bottom-up inferential analysis, synthesize research information into spreadsheet models; both are communicated to key stakeholders through live presentation</li>
+					</ul>
+				<br><strong>Global Director of Quantitative Analytics</strong>, VGM<span>07/2017-08/2019</span>
+					<ul>
+						<li>Oversaw a small team of quantitative analysts for market research through surveys primarily focused in the video game industry.  Contributed to project roadmaps, delegated tasks, directed analysis, and approved reports.</li>
+						<li>Facilitated high-level business decisions based on client needs.</li>
+						<li><strong>Projects</strong> (overseen and directed): A/B testing of video game visual assets; TURF analysis on TV shows, Product Fit and tracker studies for game services platform; Segmentation study on mobile video games</li>
+						<li>Clients include: Amazon, Bandai Namco, Capcom, Tencent, WB Games, and Zynga among many others.</li>
+					</ul>
+				<br><strong>Quantitative Analyst</strong>, VGMarket<span>09/2016-06/2017</span>
+					<ul>
+						<li>Designed surveys, analyzed data, and reported insights to clients for key market research objectives primarily focused in the video game industry. Used metrics to determine reception for product concepts and helped gauge response to products well past their launch. Familiar with the Qualtrics platform.</li>
+						<li>Facilitated high-level business decisions based on client needs.</li>
+						<li><strong>Projects</strong>: Longitudinal studies on video game retention; Market Basket Analysis for media platforms; t-tests and confidence intervals regularly reported with Key Metrics; margin of error often reported with percentages</li>
 					</ul>
 			</p>
 			<p>
