--- a/pages/resume.html
+++ b/pages/resume.html
@@ -25,7 +25,7 @@
 		<div class="main">
 			<h1 align="center">Allan Swartz</h1>
 			<p align="center"><strong>Email</strong>:<a href="mailto:agsw@outlook.com">agsw@outlook.com</a>|<strong>Github</strong>:<a href="https://github.com/aswartz04" target="_blank">aswartz04</a></p>
-			<p>OBJECTIVE:  Seeking a creative and dynamic environment to develop professional skills as a data scientist.</p>
+			<p>OBJECTIVE:  Seeking a creative and dynamic environment to develop professional skills as a data analyst or scientist.</p>
 			<p>
 				<strong>TECHNICAL SKILLS</strong>
 					<ul>
@@ -37,7 +37,19 @@
 					</ul>
 			</p>
 			<p>
+				<strong>OTHER SKILLS</strong>
+					<ul>
+						<li>Team focused, strong written and verbal communication, enjoy problem solving and puzzles</li>
+					</ul>
+			</p>
+			<p>
 				<strong>WORK EXPERIENCE</strong>
+				<br><strong>Product Operations Research Analyst</strong>, Google via Creative Circle<span>11/2020-Present</span>
+					<ul>
+						<li>Conduct primary and secondary market research on a consumer level leading to 50% more efficient team output</li>
+						<li>Strategize roadmaps and B2C use cases for a Google product</li>
+						<li>Generate and assist in word document or deck reports synthesizing research information into models providing 30% more coverage in analytical insights</li>
+					</ul>
 				<br><strong>Product Operations Research Analyst</strong>, Google via Creative Circle<span>09/2019-09/2020</span>
 					<ul>
 						<li>Conduct primary and secondary market research to support key decisions on an enterprise level</li>
@@ -116,6 +128,7 @@
 			<p>
 				<strong>ACHIEVEMENTS</strong>
 				<ul>
+					<li>Google Data Analytics Certificate <span>09/2021</span></li>
 					<li>Bruce Trumbo Scholarship Award <span>03/2016</span></li>
 					<li>Earned the rank of Eagle Scout <span>02/2004</span></li>
 				</ul>
