--- a/pages/resume.html
+++ b/pages/resume.html
@@ -25,7 +25,7 @@
 		<div class="main">
 			<h1 align="center">Allan Swartz</h1>
 			<p align="center"><strong>Email</strong>:<a href="mailto:agsw@outlook.com">agsw@outlook.com</a>|<strong>Github</strong>:<a href="https://github.com/aswartz04" target="_blank">aswartz04</a></p>
-			<p>OBJECTIVE:  Seeking a creative and dynamic environment to develop professional skills as a data analyst or scientist.</p>
+			<p>OBJECTIVE:  Seeking a creative and dynamic environment to develop professional skills as a data scientist.</p>
 			<p>
 				<strong>TECHNICAL SKILLS</strong>
 					<ul>
