New case study added to project list.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -24,6 +24,7 @@
 		</div> 
 		<div class="main">
 			<h1 align="center">Data Science Projects</h1>
+			<p><a href="casestudies/fitnesstracking.html">Google Data Analytics Program Case Study</a></p>
 			<p><a href="stattheory/labci.html">Exploring Confidence Intervals</a></p>
 			<p><a href="main/timeseries.html">Time Series Analysis: Home Sales</a></p>
 			<p><a href="main/pgeML.html">Classification of PG&E's Customers by Electricity Usage</a></p>
